Added commented code, no functional changes.